--- a/SCP-575/SCP-575.csproj
+++ b/SCP-575/SCP-575.csproj
@@ -19,13 +19,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="EXILED" Version="9.0.0-beta.2" />
+    <PackageReference Include="EXILED" Version="9.0.0-beta.5" />
+    <PackageReference Include="ExMod.Exiled" Version="9.4.0" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.556" IncludeAssets="All" PrivateAssets="All" />
     <PackageReference Include="StyleCop.Analyzers.Unstable" Version="1.2.0.556">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="YamlDotNet" Version="16.0.0" />
+    <PackageReference Include="YamlDotNet" Version="16.3.0" />
     <PackageReference Include="Lib.Harmony" Version="2.3.3" />
   </ItemGroup>
 
