--- a/SCP-575/SCP-575.csproj
+++ b/SCP-575/SCP-575.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <None Remove="Shared\Audio\ambience.wav" />
     <None Remove="Shared\Audio\scream-angry.wav" />
+    <None Remove="Shared\Audio\scream-dying.wav" />
     <None Remove="Shared\Audio\scream.wav" />
   </ItemGroup>
 
@@ -26,6 +27,7 @@
   <ItemGroup>
     <EmbeddedResource Include="Shared\Audio\ambience.wav" />
     <EmbeddedResource Include="Shared\Audio\scream-angry.wav" />
+		<EmbeddedResource Include="Shared\Audio\scream-dying.wav" />
     <EmbeddedResource Include="Shared\Audio\scream.wav" />
   </ItemGroup>
 
