--- a/SCP-575/SCP-575.csproj
+++ b/SCP-575/SCP-575.csproj
@@ -16,6 +16,9 @@
     <None Remove="Shared\Audio\scream-angry.wav" />
     <None Remove="Shared\Audio\scream-dying.wav" />
     <None Remove="Shared\Audio\scream.wav" />
+    <None Remove="Shared\Audio\whispers-bang.wav" />
+    <None Remove="Shared\Audio\whispers-mixed.wav" />
+    <None Remove="Shared\Audio\whispers.wav" />
   </ItemGroup>
 
   <ItemGroup>
@@ -29,6 +32,8 @@
     <EmbeddedResource Include="Shared\Audio\scream-angry.wav" />
 		<EmbeddedResource Include="Shared\Audio\scream-dying.wav" />
     <EmbeddedResource Include="Shared\Audio\scream.wav" />
+    <EmbeddedResource Include="Shared\Audio\whispers-bang.wav" />
+    <EmbeddedResource Include="Shared\Audio\whispers-mixed.wav" />
   </ItemGroup>
 
   <ItemGroup>
@@ -40,6 +45,10 @@
     </PackageReference>
     <PackageReference Include="YamlDotNet" Version="16.3.0" />
     <PackageReference Include="Lib.Harmony" Version="2.3.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Shared\Audio\whispers.wav" />
   </ItemGroup>
 
   <ItemGroup>
