--- a/SCP-575/SCP-575.csproj
+++ b/SCP-575/SCP-575.csproj
@@ -1,121 +1,128 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <OutputType>Library</OutputType>
-    <AssemblyName>$(ProjectName)</AssemblyName>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
-    <Version>1.0.0</Version>
-    <TargetFramework>net48</TargetFramework>
-    <AssemblyVersion>5.0.2</AssemblyVersion>
-    <FileVersion>5.0.2</FileVersion>
-    <LangVersion>9.0</LangVersion>
-  </PropertyGroup>
-  <ItemGroup>
-    <None Remove="Shared\Audio\ambience.wav" />
-    <None Remove="Shared\Audio\scream-angry.wav" />
-    <None Remove="Shared\Audio\scream-dying.wav" />
-    <None Remove="Shared\Audio\scream.wav" />
-    <None Remove="Shared\Audio\whispers-bang.wav" />
-    <None Remove="Shared\Audio\whispers-mixed.wav" />
-    <None Remove="Shared\Audio\whispers.wav" />
-  </ItemGroup>
+	<PropertyGroup>
+		<OutputType>Library</OutputType>
+		<AssemblyName>$(ProjectName)</AssemblyName>
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+		<CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
+		<Version>1.0.0</Version>
+		<TargetFramework>net48</TargetFramework>
+		<AssemblyVersion>5.0.2</AssemblyVersion>
+		<FileVersion>5.0.2</FileVersion>
+		<LangVersion>9.0</LangVersion>
+	</PropertyGroup>
+	<ItemGroup>
+		<None Remove="Shared\Audio\ambience.wav" />
+		<None Remove="Shared\Audio\scream-angry.wav" />
+		<None Remove="Shared\Audio\scream-dying.wav" />
+		<None Remove="Shared\Audio\scream.wav" />
+		<None Remove="Shared\Audio\whispers-bang.wav" />
+		<None Remove="Shared\Audio\whispers-mixed.wav" />
+		<None Remove="Shared\Audio\whispers.wav" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
-      <_Parameter1>$(ProjectName)</_Parameter1>
-    </AssemblyAttribute>
-  </ItemGroup>
+	<ItemGroup>
+		<AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+			<_Parameter1>$(ProjectName)</_Parameter1>
+		</AssemblyAttribute>
+	</ItemGroup>
 
-  <ItemGroup>
-    <EmbeddedResource Include="Shared\Audio\Files\ambience.wav" />
-    <EmbeddedResource Include="Shared\Audio\Files\scream-angry.wav" />
-    <EmbeddedResource Include="Shared\Audio\Files\scream-dying.wav" />
-    <EmbeddedResource Include="Shared\Audio\Files\scream.wav" />
-    <EmbeddedResource Include="Shared\Audio\Files\whispers-bang.wav" />
-    <EmbeddedResource Include="Shared\Audio\Files\whispers-mixed.wav" />
-	<EmbeddedResource Include="Shared\Audio\Files\whispers.wav" />
-  </ItemGroup>
+	<ItemGroup>
+		<EmbeddedResource Include="Shared\Audio\Files\ambience.wav" />
+		<EmbeddedResource Include="Shared\Audio\Files\scream-angry.wav" />
+		<EmbeddedResource Include="Shared\Audio\Files\scream-dying.wav" />
+		<EmbeddedResource Include="Shared\Audio\Files\scream.wav" />
+		<EmbeddedResource Include="Shared\Audio\Files\whispers-bang.wav" />
+		<EmbeddedResource Include="Shared\Audio\Files\whispers-mixed.wav" />
+		<EmbeddedResource Include="Shared\Audio\Files\whispers.wav" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="ExMod.Exiled" Version="9.6.3" />
-    <PackageReference Include="Northwood.LabAPI" Version="1.1.0" />
-    <PackageReference Include="SCPSL-AudioManagerAPI" Version="1.3.0" />
-    <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.556" IncludeAssets="All" PrivateAssets="All" />
-    <PackageReference Include="StyleCop.Analyzers.Unstable" Version="1.2.0.556">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="YamlDotNet" Version="16.3.0" />
-    <PackageReference Include="Lib.Harmony" Version="2.3.6" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="ExMod.Exiled" Version="9.6.3" />
+		<PackageReference Include="Northwood.LabAPI" Version="1.1.0" />
+		<PackageReference Include="SCPSL-AudioManagerAPI" Version="1.3.0" />
+		<PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.556" IncludeAssets="All" PrivateAssets="All" />
+		<PackageReference Include="StyleCop.Analyzers.Unstable" Version="1.2.0.556">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="YamlDotNet" Version="16.3.0" />
+		<PackageReference Include="Lib.Harmony" Version="2.3.6" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Reference Include="0Harmony">
-      <HintPath>..\..\_API\7.2.0\0Harmony.dll</HintPath>
-    </Reference>
-    <Reference Include="Assembly-CSharp-firstpass">
-      <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\SCP Secret Laboratory Dedicated Server\SCPSL_Data\Managed\Assembly-CSharp-firstpass.dll</HintPath>
-    </Reference>
-    <Reference Include="CommandSystem.Core">
-      <HintPath>..\..\_API\7.2.0\CommandSystem.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="Exiled.API">
-      <HintPath>..\..\_API\7.2.0\Exiled.API.dll</HintPath>
-    </Reference>
-    <Reference Include="Exiled.CreditTags">
-      <HintPath>..\..\_API\7.2.0\Exiled.CreditTags.dll</HintPath>
-    </Reference>
-    <Reference Include="Exiled.Events">
-      <HintPath>..\..\_API\7.2.0\Exiled.Events.dll</HintPath>
-    </Reference>
-    <Reference Include="Exiled.Loader">
-      <HintPath>..\..\_API\7.2.0\Exiled.Loader.dll</HintPath>
-    </Reference>
-    <Reference Include="Exiled.Permissions">
-      <HintPath>..\..\_API\7.2.0\Exiled.Permissions.dll</HintPath>
-    </Reference>
-    <Reference Include="Mirror">
-      <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\SCP Secret Laboratory Dedicated Server\SCPSL_Data\Managed\Mirror.dll</HintPath>
-    </Reference>
-    <Reference Include="NorthwoodLib">
-      <HintPath>..\..\_API\7.2.0\NorthwoodLib.dll</HintPath>
-    </Reference>
-    <Reference Include="Pooling">
-      <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\SCP Secret Laboratory Dedicated Server\SCPSL_Data\Managed\Pooling.dll</HintPath>
-    </Reference>
-    <Reference Include="System.ComponentModel.DataAnnotations">
-      <HintPath>..\..\_API\7.2.0\System.ComponentModel.DataAnnotations.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.RenderPipelines.Core.Runtime">
-      <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\SCP Secret Laboratory Dedicated Server\SCPSL_Data\Managed\Unity.RenderPipelines.Core.Runtime.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine">
-      <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\SCP Secret Laboratory Dedicated Server\SCPSL_Data\Managed\UnityEngine.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.AnimationModule">
-      <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\SCP Secret Laboratory Dedicated Server\SCPSL_Data\Managed\UnityEngine.AnimationModule.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.AudioModule">
-      <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\SCP Secret Laboratory Dedicated Server\SCPSL_Data\Managed\UnityEngine.AudioModule.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.CoreModule">
-      <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\SCP Secret Laboratory Dedicated Server\SCPSL_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.PhysicsModule">
-      <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\SCP Secret Laboratory Dedicated Server\SCPSL_Data\Managed\UnityEngine.PhysicsModule.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.TextRenderingModule">
-      <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\SCP Secret Laboratory Dedicated Server\SCPSL_Data\Managed\UnityEngine.TextRenderingModule.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.UI">
-      <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\SCP Secret Laboratory Dedicated Server\SCPSL_Data\Managed\UnityEngine.UI.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.UnityWebRequestModule">
-      <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\SCP Secret Laboratory Dedicated Server\SCPSL_Data\Managed\UnityEngine.UnityWebRequestModule.dll</HintPath>
-    </Reference>
-    <Reference Include="YamlDotNet">
-      <HintPath>..\..\_API\7.2.0\YamlDotNet.dll</HintPath>
-    </Reference>
-  </ItemGroup>
+	<PropertyGroup>
+		<SCPSL_MANAGED Condition="'$(SCPSL_MANAGED)' == ''">..\..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\SCP Secret Laboratory Dedicated Server\SCPSL_Data\Managed</SCPSL_MANAGED>
+		<EXILED_API Condition="'$(EXILED_API)' == ''">..\..\\_API\7.2.0</EXILED_API>
+	</PropertyGroup>
+	<ItemGroup>
+		<!-- EXILED API References -->
+		<Reference Include="0Harmony">
+			<HintPath>$(EXILED_API)\0Harmony.dll</HintPath>
+		</Reference>
+		<Reference Include="CommandSystem.Core">
+			<HintPath>$(EXILED_API)\CommandSystem.Core.dll</HintPath>
+		</Reference>
+		<Reference Include="Exiled.API">
+			<HintPath>$(EXILED_API)\Exiled.API.dll</HintPath>
+		</Reference>
+		<Reference Include="Exiled.CreditTags">
+			<HintPath>$(EXILED_API)\Exiled.CreditTags.dll</HintPath>
+		</Reference>
+		<Reference Include="Exiled.Events">
+			<HintPath>$(EXILED_API)\Exiled.Events.dll</HintPath>
+		</Reference>
+		<Reference Include="Exiled.Loader">
+			<HintPath>$(EXILED_API)\Exiled.Loader.dll</HintPath>
+		</Reference>
+		<Reference Include="Exiled.Permissions">
+			<HintPath>$(EXILED_API)\Exiled.Permissions.dll</HintPath>
+		</Reference>
+		<Reference Include="NorthwoodLib">
+			<HintPath>$(EXILED_API)\NorthwoodLib.dll</HintPath>
+		</Reference>
+		<Reference Include="System.ComponentModel.DataAnnotations">
+			<HintPath>$(EXILED_API)\System.ComponentModel.DataAnnotations.dll</HintPath>
+		</Reference>
+		<Reference Include="YamlDotNet">
+			<HintPath>$(EXILED_API)\YamlDotNet.dll</HintPath>
+		</Reference>
+
+		<!-- SCP:SL Game References -->
+		<Reference Include="Assembly-CSharp-firstpass">
+			<HintPath>$(SCPSL_MANAGED)\Assembly-CSharp-firstpass.dll</HintPath>
+		</Reference>
+		<Reference Include="Mirror">
+			<HintPath>$(SCPSL_MANAGED)\Mirror.dll</HintPath>
+		</Reference>
+		<Reference Include="Pooling">
+			<HintPath>$(SCPSL_MANAGED)\Pooling.dll</HintPath>
+		</Reference>
+		<Reference Include="Unity.RenderPipelines.Core.Runtime">
+			<HintPath>$(SCPSL_MANAGED)\Unity.RenderPipelines.Core.Runtime.dll</HintPath>
+		</Reference>
+		<Reference Include="UnityEngine">
+			<HintPath>$(SCPSL_MANAGED)\UnityEngine.dll</HintPath>
+		</Reference>
+		<Reference Include="UnityEngine.AnimationModule">
+			<HintPath>$(SCPSL_MANAGED)\UnityEngine.AnimationModule.dll</HintPath>
+		</Reference>
+		<Reference Include="UnityEngine.AudioModule">
+			<HintPath>$(SCPSL_MANAGED)\UnityEngine.AudioModule.dll</HintPath>
+		</Reference>
+		<Reference Include="UnityEngine.CoreModule">
+			<HintPath>$(SCPSL_MANAGED)\UnityEngine.CoreModule.dll</HintPath>
+		</Reference>
+		<Reference Include="UnityEngine.PhysicsModule">
+			<HintPath>$(SCPSL_MANAGED)\UnityEngine.PhysicsModule.dll</HintPath>
+		</Reference>
+		<Reference Include="UnityEngine.TextRenderingModule">
+			<HintPath>$(SCPSL_MANAGED)\UnityEngine.TextRenderingModule.dll</HintPath>
+		</Reference>
+		<Reference Include="UnityEngine.UI">
+			<HintPath>$(SCPSL_MANAGED)\UnityEngine.UI.dll</HintPath>
+		</Reference>
+		<Reference Include="UnityEngine.UnityWebRequestModule">
+			<HintPath>$(SCPSL_MANAGED)\UnityEngine.UnityWebRequestModule.dll</HintPath>
+		</Reference>
+	</ItemGroup>
 </Project>
