--- a/SCP-575/SCP-575.csproj
+++ b/SCP-575/SCP-575.csproj
@@ -12,6 +12,9 @@
 		<LangVersion>9.0</LangVersion>
 	</PropertyGroup>
 	<ItemGroup>
+	  <Compile Remove="EventHandler.cs" />
+	</ItemGroup>
+	<ItemGroup>
 		<None Remove="Shared\Audio\ambience.wav" />
 		<None Remove="Shared\Audio\scream-angry.wav" />
 		<None Remove="Shared\Audio\scream-dying.wav" />
